[gd_scene load_steps=4 format=3 uid="uid://48qkjwgaxowd"]

[ext_resource type="Script" uid="uid://dbv4hd6pkalag" path="res://scenes/color-picker-dialog/color-picker-dialog.gd" id="1_2h4n3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8u3s"]
bg_color = Color(0.317647, 0.247059, 0.184314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 6

[sub_resource type="Theme" id="Theme_uw0v8"]
Panel/styles/panel = SubResource("StyleBoxFlat_q8u3s")

[node name="ColorPickerDialog" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(310, 680)
offset_right = 310.0
offset_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_uw0v8")
script = ExtResource("1_2h4n3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
text = "Save"

[connection signal="color_changed" from="MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
